# FileAnalysisTool

./: .replit  app.py  core.py  main.py  models.py  pyproject.toml  pyproject.toml.bak  requirement.txt  requirements.txt
attached_assets/: Pasted-Louise-A-Personalized-Emotional-Support-Website-A-fully-responsive-and-animated-personal-website-c-1746358623386.txt  app.py
instance/: louise.db
static/css/: chat-extras.css  clouds.css  rabbit.css  shooting-stars.css  stars.css  styles.css
static/js/: animations.js  chat.js  clouds.js  confetti.js  page-transitions.js  rabbit.js  sound-effects.js  stars.js  typing-effect.js
static/uploads/: 43112138-adb5-4b4e-8d21-a492792d17ff.m4a
templates/: birthday.html  feelings.html  index.html  layout.html  response.html
