[tool.poetry]
name = "repl_nix_workspace"
version = "0.1.0"
description = "A sample project description"
authors = ["Ashufer <ashufer1211@gmail.com>"]

[project]
name = "repl_nix_workspace"
version = "0.1.0"
description = "A sample project description"
authors = [{name = "Ashufer", email = "ashufer1211@gmail.com"}]
license = "MIT"
readme = "README.md"
keywords = []
classifiers = []
dependencies = [
    "python>=3.11",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.77.0",
    "psycopg2-binary>=2.9.10",
    "sendgrid>=6.11.0",
    "twilio>=9.5.2"
]
dynamic = ["version"]

[tool.poetry.group.dev.dependencies]
# Add your dev dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
