[tool.poetry]
name = "repl_nix_workspace"
version = "0.1.0"
description = "A sample project description"
authors = ["Ashufer <ashufer1211@gmail.com>"]

[tool.poetry]
name = "repl_nix_workspace"
version = "0.1.0"
description = "A sample project description"
authors = ["Ashufer <ashufer1211@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
keywords = []
classifiers = []
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.77.0",
    "psycopg2-binary>=2.9.10",
    "sendgrid>=6.11.0",
    "twilio>=9.5.2",
    "werkzeug>=2.0.0"
]
dynamic = ["version"]

[tool.poetry.group.dev.dependencies]
# Add your dev dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [{include = "app"}]
